--- a/localisation/braz_por/phi_l_braz_por.yml
+++ b/localisation/braz_por/phi_l_braz_por.yml
@@ -3,25 +3,30 @@
 ##################
 ### START MENU ###
 ##################
-phi_game_start.1.name: "PHI START MENU"
-phi_game_start.1.desc: "You are playing §HPHI v2.0G (gobbi porting for 3.7.4)§!.\n\nChangelog is available at:\n§Bhttps://stellaris.paradoxwikis.com/Phi_mp_balancing/Phi_updates_and_changelog§!\n\nConsider putting a §Gthumbs up§! on the steam page of the mod!\n\nSelect your options for the game, then press OK to start."
+phi_game_start.1.name: "MENU DE INÍCIO DO PHIGO"
+phi_game_start.1.desc: "Você está jogando o §HPHIGO v1.2.\n"
 
-phi_game_start.1.border_gore_allowed: "Border Gore is §GALLOWED§!"
-phi_game_start.1.border_gore_allowedTT: "§YBorder Gore = Allowed§! means that you §Gcan§! build outposts and have parts of your empire not directly connected to a fully colonized planet.\n\nClick here to §RDISALLOW§! Border Gore"
-phi_game_start.1.border_gore_disallowed: "Border Gore is §RDISALLOWED§! §Y(default option)§!"
-phi_game_start.1.border_gore_disallowedTT: "§YBorder Gore = Disallowed§! means that you §Rcannot§! build outposts and have parts of your empire not directly connected to a fully colonized planet.\n\n§HAny non-connected outpost will be destroyed at the end of the month (unless you are at war).§!\n\nClick here to §GALLOW§!"
+phi_game_start.1.border_gore_allowed: "O Border Gore está §GPERMITIDO§!"
+phi_game_start.1.border_gore_allowedTT: "§YBorder Gore = Permitido§! significa que você §Gpode§! construir postos avançados e ter partes do seu império não diretamente conectadas (são válidos buracos de minhoca e portais) a um planeta totalmente colonizado.\n\nClique aqui para §RPROIBIR§! o Border Gore"
+phi_game_start.1.border_gore_disallowed: "O Border Gore está §RPROIBIDO§! §Y(opção padrão)§!"
+phi_game_start.1.border_gore_disallowedTT: "§YBorder Gore = Proibido§! significa que você §Rnão pode§! construir postos avançados e ter partes do seu império não diretamente conectadas a um planeta totalmente colonizado.\n\n§HQualquer posto avançado não conectado será destruído no final do mês (a menos que esteja em guerra).§!\n\nClique aqui para §GPERMITIR§!"
 
-phi_game_start.1.sublimation_allowed: "Sublimation is §GALLOWED§! §Y(default option)§!"
-phi_game_start.1.sublimation_allowedTT: "§YSublimation = Allowed§! means that you §Gcan§! build special structures on starbases orbiting pulsars and black holes (§Bemitters§! and §Breceivers§!).\nIf you:\n- have researched Meta-dimensional Theory\n- have built an emitter around a blackhole\n- have built a receiver around a pulsar\n- are indipendent\nyou'll get an event at the end of the next month that will enable your empire to complete a §Bspecial project§!, and then try to §Gwin the game§! by sublimating into a new reality...\n\n§HMeta-dimensional Theory is a tier 5 Physics tech, unlocked by the +20% physics from researchers chain.§!\n\nClick here to §RDISALLOW§! Sublimation"
-phi_game_start.1.sublimation_disallowed: "Sublimation is §RDISALLOWED§!"
-phi_game_start.1.sublimation_disallowedTT: "§YSublimation = Disallowed§! means that you §Ystill can§! build special structures on starbases orbiting pulsars and black holes (§Bemitters§! and §Breceivers§!) but you §Rwon't§! get any event at the end of the month to enable the special project.\n\nClick here to §GALLOW§! Sublimation"
+phi_game_start.1.sublimation_allowed: "A Sublimação está §GPERMITIDA§! §Y(opção padrão)§!"
+phi_game_start.1.sublimation_allowedTT: "§YSublimação = Permitida§! significa que você §Gpode§! construir estruturas especiais em bases estelares orbitando pulsares e buracos negros (§Bemissores§! e §Breceptores§!).\nSe você:\n- pesquisou a Teoria Meta-dimensional\n- construiu um emissor ao redor de um buraco negro\n- construiu um receptor ao redor de um pulsar\n- é independente\nvocê receberá um evento no final do próximo mês que permitirá que seu império conclua um §Bprojeto especial§!, e então tente §Gvencer o jogo§! sublimando-se para uma nova realidade...\n\n§HA Teoria Meta-dimensional é uma tecnologia de física de nível 5, desbloqueada pela cadeia de pesquisadores +20% de física.§!\n\nClique aqui para §RPROIBIR§! a Sublimação"
+phi_game_start.1.sublimation_disallowed: "A Sublimação está §RPROIBIDA§!"
+phi_game_start.1.sublimation_disallowedTT: "§YSublimação = Proibida§! significa que você §Ainda pode§! construir estruturas especiais em bases estelares orbitando pulsares e buracos negros (§Bemissores§! e §Breceptores§!), mas você §Rnão§! receberá nenhum evento no final do mês para permitir o projeto especial.\n\nClique aqui para §GPERMITIR§! a Sublimação"
 
-phi_game_start.1.emperor_win_allowed: "Emperor Victory is §GALLOWED§! §Y(default option)§!"
-phi_game_start.1.emperor_win_allowedTT: "§YEmperor Victory = Allowed§! means that the game will end if the §BGalactic Empire§! is established and:\n- the Emperor is not at war\n- every default country is a member of the Empire\n- there is no crisis ongoing\n\n§HThe Emperor player will be proclaimed winner of the game by an end of month event.§!"
-phi_game_start.1.emperor_win_disallowed: "Emperor Victory is §RDISALLOWED§!"
-phi_game_start.1.emperor_win_disallowedTT: "§YEmperor Victory = Disallowed§! means that the game will continue even if the Galactic Empire is proclaimed and is exerting authority on all the Galaxy."
+phi_game_start.1.emperor_win_allowed: "A Vitória do Imperador está §GPERMITIDA§! §Y(opção padrão)§!"
+phi_game_start.1.emperor_win_allowedTT: "§YVitória do Imperador = Permitida§! significa que o jogo terminará se o §B Império Galáctico §! for estabelecido e:\n- o Imperador não estiver em guerra\n- cada país padrão for membro do Império\n- não houver crise em andamento\n\n§HO jogador Imperador será proclamado vencedor do jogo por um evento no final do mês.§!"
+phi_game_start.1.emperor_win_disallowed: "A Vitória do Imperador está §RPROIBIDA§!"
+phi_game_start.1.emperor_win_disallowedTT: "§YVitória do Imperador = Proibida§! significa que o jogo continuará mesmo se o Império Galáctico for proclamado e estiver exercendo autoridade em toda a Galáxia."
 
-phi_game_start.2.desc: "The mod has been upgraded to §HPHI v2.0G (porting of gobbibomb to 3.7.4)§!.\n\nChangelog is available at:\n§Bhttps://stellaris.paradoxwikis.com/Phi_mp_balancing/Phi_updates_and_changelog§!\n\nConsider putting a §Gthumbs up§! on the steam page of the mod!"
+phi_realistic_upkeep_researcher_allowed: "O Upkeep Realista de Pesquisadores está §GPERMITIDO§! §G(opção bonita)§!"
+phi_realistic_upkeep_researcher_allowedTT: "§YUpkeep Realista de Pesquisadores = Permitido§!\nPara pesquisadores de engenharia, é necessário um pequeno upkeep de liga e minerais.\nPara pesquisadores de física, é necessário um pequeno upkeep de bens de consumo ou liga (para colmeias), ambos também exigindo uma manutenção da substância básica (energia para outros impérios e alimentos para colmeias)."
+phi_realistic_upkeep_researcher_disallowed: "O Upkeep Arcade de Pesquisadores está §GPERMITIDO§! §Y(opção padrão)§!"
+phi_realistic_upkeep_researcher_disallowedTT: "§YUpkeep Arcade de Pesquisadores = Permitido§! \nTodos os pesquisadores de física e engenharia usam apenas §Yenergia§! para manutenção"
+
+phi_game_start.2.desc: "O mod foi atualizado para ser compatível com §HPHIGO v1.2§ e §H3.8.1§.\n\n"
 
 phi_game_start.1.phi_artifact_is_only_mining_station_allowed: "Science artifact station is §GALLOWED§! §Y(default option)§!"
 phi_game_start.1.phi_artifact_is_only_mining_station_allowedTT: "Science artifact station Gore = Allowed§! means that artifact research stations will be allowed and will undergo the massive Phi bonuses for research stations.\n\nClick here to §RDISALLOW§! Science artifact station"
@@ -994,3 +999,8 @@ origin_tooltip_doomsday_effects:2 "§G- ATENÇÃO: Origem Fácil§!"
 
 small10players:0 "Pequeno Grande"
 mediumover16:0 "Médio Grande"
+
+leader_trait_xenophile: "Amor pela diversidade xeno"
+leader_trait_xenophile_2: "Amor pela diversidade xeno 2"
+
+phi_open_arms: "O $contact$ adiciona outro 10 pesquisa social"
